--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.container{
+	width: 300px;
+	height: 300px;
+	border: 2px solid black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
