--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 	width: 300px;
 	height: 300px;
 	border: 2px solid black;
+	background-color: lightblue;
 	display: flex;
 	align-items: center;
 	justify-content: center;
